--- a/.github/workflows/generate_snke.yml
+++ b/.github/workflows/generate_snke.yml
@@ -1,28 +1,27 @@
-name: Generate Snake
+name: generate-snake
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    # 每 6 小时，执行一次
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
-  build:
+  generate-snake:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-
-      - name: Generate Snake
-        uses: Platane/snk@master
-        id: snake-gif
+      - uses: actions/checkout@v2
+      - uses: Platane/snk@master
         with:
-          github_user_name: ${{ github.repository_owner }}
-          gif_out_path: ./assets/github-contribution-grid-snake.gif
-          svg_out_path: ./assets/github-contribution-grid-snake.svg
-
-      - name: Push to GitHub
-        uses: EndBug/add-and-commit@v7.2.1
+          # 你的 GitHub 的名称
+          github_user_name: WJCHumble
+          # 生成的 .gif 图存储的位置
+          gif_out_path: dist/github-snake.gif
+          # 生成的 .gif 图存储的位置
+          svg_out_path: dist/github-snake.svg
+      - uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
-          branch: main
-          message: 'Generate Contribution Snake'      
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
